--- a/projects/demo-maps/src/styles/_ukis-core-ui-layout.scss
+++ b/projects/demo-maps/src/styles/_ukis-core-ui-layout.scss
@@ -14,6 +14,10 @@
       clr-icon {
         color: var(--header-branding-icon-color);
       }
+
+      &.nav-link{
+        overflow: hidden;
+      }
     }
 
     .title {
